[package]
name = "packet-dissector-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core types and traits for packet-dissector: Dissector trait, DissectBuffer, Layer, Field, and error types"
readme = "README.md"
keywords = ["packet", "network", "dissector", "parser", "protocol"]
categories = ["network-programming", "parser-implementations"]

[dependencies]
thiserror = { workspace = true }

[package.metadata.docs.rs]
all-features = true
