[package]
name = "packet-dissector-dns"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["packet", "network", "dissector", "parser", "dns"]
categories = ["network-programming", "parser-implementations"]
description = "DNS (RFC 1035) dissector for packet-dissector"

[dependencies]
packet-dissector-core = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
packet-dissector-test-alloc = { workspace = true }

[[bench]]
name = "dissect"
harness = false
