[package]
name = "packet-dissector-ethernet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["packet", "network", "dissector", "parser", "ethernet"]
categories = ["network-programming", "parser-implementations"]
description = "Ethernet II (IEEE 802.3) and 802.1Q VLAN dissector for packet-dissector"

[dependencies]
packet-dissector-core = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
packet-dissector-test-alloc = { workspace = true }

[[bench]]
name = "dissect"
harness = false
