[package]
name = "packet-dissector-gtpv2c"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["packet", "network", "dissector", "parser", "gtp"]
categories = ["network-programming", "parser-implementations"]
description = "GTPv2-C dissector for packet-dissector"

[dependencies]
packet-dissector-core = { workspace = true }
packet-dissector-ppp = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
packet-dissector-test-alloc = { workspace = true }

[[bench]]
name = "dissect"
harness = false
