[package]
name = "packet-dissector-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["packet", "network", "dissector", "parser", "http"]
categories = ["network-programming", "parser-implementations"]
description = "HTTP/1.1 (RFC 9112) dissector for packet-dissector"

[dependencies]
packet-dissector-core = { workspace = true }
httparse = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
packet-dissector-test-alloc = { workspace = true }

[[bench]]
name = "dissect"
harness = false
