[package]
name = "packet-dissector-linux-sll"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["packet", "network", "dissector", "parser", "linux"]
categories = ["network-programming", "parser-implementations"]
description = "Linux cooked capture v1 (SLL / LINKTYPE_LINUX_SLL) dissector for packet-dissector"

[dependencies]
packet-dissector-core = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
packet-dissector-test-alloc = { workspace = true }

[[bench]]
name = "dissect"
harness = false
