[package]
name = "packet-dissector-nas5g"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["packet", "network", "dissector", "parser", "5g"]
categories = ["network-programming", "parser-implementations"]
description = "5G NAS (Non-Access Stratum) dissector for packet-dissector"

[dependencies]
packet-dissector-core = { workspace = true }

[dev-dependencies]
packet-dissector-test-alloc = { workspace = true }
