[package]
name = "packet-dissector-ngap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["packet", "network", "dissector", "parser", "5g"]
categories = ["network-programming", "parser-implementations"]
description = "NGAP (NG Application Protocol) dissector for packet-dissector"

[dependencies]
packet-dissector-core = { workspace = true }
packet-dissector-nas5g = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
packet-dissector-test-alloc = { workspace = true }

[[bench]]
name = "dissect"
harness = false
