[package]
name = "packet-dissector-pfcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["packet", "network", "dissector", "parser", "pfcp"]
categories = ["network-programming", "parser-implementations"]
description = "PFCP dissector for packet-dissector"

[dependencies]
packet-dissector-core = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
packet-dissector-test-alloc = { workspace = true }

[[bench]]
name = "dissect"
harness = false
