[package]
name = "packet-dissector-quic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["packet", "network", "dissector", "parser", "quic"]
categories = ["network-programming", "parser-implementations"]
description = "QUIC (RFC 9000) dissector for packet-dissector"

[dependencies]
packet-dissector-core = { workspace = true }

[dev-dependencies]
packet-dissector-test-alloc = { workspace = true }
